[project]
name = "lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph>=0.17.5",
    "cffi>=2.0.0",
    "future>=1.0.0",
    "macholib>=1.16.4",
    "pycparser>=3.0",
    "raylib>=5.5.0.4",
    "setuptools>=80.10.1",
    "six>=1.17.0",
    "wheel>=0.45.1",
]
